# artifacts/api-server/src/lib/spmb-receipt.ts
@@ -347,19 +347,19 @@ export async function createSpmbReceipt(application: Pendaftar): Promise<Uint8Ar
   const mother = splitCombinedValue(textValue(application.instansi_jabatan_ibu));
   const parentValues = [
     application.nomor_kk,
+    application.nik_ayah,
     application.nama_ayah,
     application.ttl_ayah,
     application.pekerjaan_ayah,
     application.pendidikan_ayah,
-    "-",
     father.institution,
     father.position,
     application.penghasilan_ayah,
+    application.nik_ibu,
     application.nama_ibu,
     application.ttl_ibu,
     application.pekerjaan_ibu,
     application.pendidikan_ibu,
-    "-",
     mother.institution,
     mother.position,
     application.penghasilan_ibu,
