# lib/db/src/schema/pendaftar.ts
@@ -27,7 +27,8 @@ export const pendaftarTable = pgTable("pendaftar", {
   tahun_lulus: integer("tahun_lulus"),
   alamat_sekolah_asal: text("alamat_sekolah_asal"),
   nomor_kk: text("nomor_kk").notNull(),
-  nik_orangtua: text("nik_orangtua").notNull(),
+  nik_ayah: text("nik_ayah").notNull(),
+  nik_ibu: text("nik_ibu"),
   nomor_hp_orangtua: text("nomor_hp_orangtua").notNull(),
   email: text("email").notNull(),
   nama_ayah: text("nama_ayah").notNull(),
